--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,19 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
-        "owen-it/laravel-auditing": "^8.0"
+        "owen-it/laravel-auditing": "^8.0",
+        "geekcom/validator-docs": "^1.3",
+        "intervention/image": "^2.4",
+        "jeroennoten/laravel-adminlte": "^1.24",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "barryvdh/laravel-debugbar": "^3.2"
     },
     "autoload": {
         "classmap": [
