--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "6.*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.0",
-        "owen-it/laravel-auditing": "^9.0",
         "geekcom/validator-docs": "^3.0",
         "intervention/image": "^2.4",
         "jeroennoten/laravel-adminlte": "^2.0",
+        "laravel/framework": "6.*",
+        "laravel/passport": "^7.5",
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^6.0",
+        "owen-it/laravel-auditing": "^9.0",
         "predis/predis": "^1.1"
     },
     "require-dev": {
