--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "geekcom/validator-docs": "^3.0",
+        "guzzlehttp/guzzle": "^6.4",
         "intervention/image": "^2.4",
         "jeroennoten/laravel-adminlte": "^2.0",
         "laravel/framework": "6.*",
