--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.0",
         "geekcom/validator-docs": "^3.0",
         "guzzlehttp/guzzle": "^6.4",
