--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
         "owen-it/laravel-auditing": "^9.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "iamstuartwilson/strava" : "^1.4"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
