--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
+    "/js/recaptcha.js": "/js/recaptcha.js?id=c2fce1cc13b6a3c23730",
     "/css/font-awesome.css": "/css/font-awesome.css?id=bdb5a19bf11f48a83c68"
 }
